push to add final parts of assignment

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- <link rel="stylesheet" href="style.css"> -->
         <link rel="stylesheet" href="Example_CSS_Style Templates\style3.css">
         <link rel="stylesheet" href="table_style.css">
-        <title>My Webpage Title</title>
+        <title>Aaron Rodden Portfolio</title>
     </header>
     <body>
         <!---Navigation--->
@@ -31,12 +31,12 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!--This code creates the subheading underneath the line dividers-->
-                <p class="masthead-subheading font-weight-light mb-0">School of Information Student</p>
+                <p class="masthead-subheading font-weight-light mb-0">UXer always looking to improve</p>
             </div>
         </header>
         <section class="text-center">
 
-            <div class="col-md-6 col-lg-4 mb-5">
+            <div class="container d-flex align-items-center flex-column">
                 <!-- put your bio paragraph here; remember to use the correct html tags -->
                 <p>UX Designer/Researcher looking to use their experience in software, community building, and research on human learning to improve the experience of individual and group growth through technology. </p>
             </div>
