--- a/list.html
+++ b/list.html
@@ -23,8 +23,8 @@
             <h1>Tournament Placements</h1>
         </header>
         <!--Here is where the table will be loaded in.  The actual table will be loaded in JavaScript.-->
-        <section class="mt-5 text-center">
-            <div id="showDataJSON"></div>
+        <section class="mt-2 text-center">
+            <div style="display:flex;justify-content:center;align-items:center;" id="showDataJSON"></div>
         </section>
     </body>
 
